# AudioWave

./: .gitignore  LICENSE  README.md  README_EN.md  audiowave.py  config.example.json  main.py  pyproject.toml  requirements.txt
audiowave/: __main__.py  app.py  main.py
audiowave/core/: audio_utils.py  config.py  engine.py  engine_factory.py  gstreamer_engine.py  metadata_reader.py  url_stream_helper.py
audiowave/plugins/: plugin_manager.py
core/: audio_utils.py  config.py  duration_cache.py  gstreamer_engine.py  playback_controller.py  playlist.py  theme_manager.py  url_stream_helper.py
core/themes/: __init__.py  base_theme.py  dark_themes.py  light_themes.py  theme_registry.py  themes_init.py
packaging/: audiowave
packaging/arch/: PKGBUILD
packaging/debian/: audiowave.desktop  control  postinst
packaging/rpm/: audiowave.spec
plugins/: plugin_manager.py
plugins/equalizer/: equalizer_plugin.py
plugins/lyrics/: lyrics_plugin.py
plugins/radio_browser/: __init__.py  radio_browser_plugin.py
plugins/sleeptimer/: __init__.py  sleeptimer_plugin.py
plugins/theme_creator/: theme_creator_plugin.py
ui/dialogs/: about.py  settings_dialog.py  tag_editor.py  tag_editor_dialog.py
ui/handlers/: keyboard_handler.py
ui/panels/: playlist_cache.py  playlist_context_menu.py  playlist_delegate.py  playlist_operations.py  playlist_panel.py
ui/themes/: themes.json
ui/tray/: notifications.py  tray_icon.py  tray_menu.py
ui/utils/: svg_icon_manager.py
ui/widgets/: animated_volume_widget.py  modern_control_buttons.py  player_styles.py  title_bar.py
(+29 files in other folders)
